--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
 
   
     <div class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Code by <a href="#">Shalini Rama</a>.
+      <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+        Code by <a href="#">Shalini Rama</a>.</p>
     </div>
   </body>
   </html>
